2003-03-02  Richard Henderson  <rth@redhat.com>

	* configure.in (HAVE_AS_LTOFFX_LDXMOV_RELOCS): New ia64 test.
	* config.in, configure: Rebuild.
	* config/ia64/ia64.c (ia64_ld_address_bypass_p): Accept lo_sum.
	* config/ia64/ia64.md (load_symptr): Use high/lo_sum for the 
	paired ldtoffx and ldxmov annotations.
	(load_symptr_internal1): Remove.
	(load_symptr_high, load_symptr_low): New.

2003-03-02  Neil Booth  <neil@daikokuya.co.uk>

	* c-incpath.c (add_path): Fix sysp assignment.

2003-03-02  Kurt Garloff  <garloff@suse.de>

	* params.def: Introduce parameter max-inline-insns-rtl for
	a separate limit for the RTL inliner.
	* params.h: Likewise.
	* integrate.c (function_cannot_inline_p): Use it.
	* toplev.c (decode_f_option): Set multiple parameters 
	controlling inlining with -finline-limit.
	* params.def: Fix orthographic and typographic errors.
	* doc/invoke.texi: Document parameters controlling inlining
	and the way -finline-limit sets multiple of them.

	* tree.h (struct tree_decl): Introduce inlined_function_flag,
	recording whether the function became eligible for inlining
	by a compiler flag rather than the declaration.
	Provide DID_INLINE_FUNC macro to access it.
	* c-decl.c (grokdeclarator): Set DID_INLINE_FUNC.
	* cp/decl.c (grokfndecl): Likewise.
	* toplev.c (rest_of_compilation): Likewise.
	* cp/optimize (maybe_clone_body): Copy DID_INLINE_FUNC.
	* print-tree.c (print_node): Report it.
	* params.def: Introduce new max-inline-insns-auto limit.
	* params.h: Likewise.
	* tree-inline.c (inlinable_function_p): Apply it to functions
	with DID_INLINE_FUNC set.
	* toplev.c (decode_f_option): Initialize it from -finline-limit
	value.
	* doc/invoke.texi: Document new parameter.

2003-03-02  Geoffrey Keating  <geoffk@apple.com>

	* fix-header.c (read_scan_file): Don't reference simplify_path.

2003-03-02  Stephane Carrez  <stcarrez@nerim.fr>

	* config/m68hc11/m68hc11.c (m68hc11_override_options): Don't enable