@@ -1,3 +1,8 @@
+2003-03-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* ggc-common.c (ggc_rlimit_bound): Cast RLIM_INFINITY to avoid
+	warnings.
+
 2003-03-02  Richard Henderson  <rth@redhat.com>
 
 	* configure.in (HAVE_AS_LTOFFX_LDXMOV_RELOCS): New ia64 test.
